<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/fragment_baby_condition_advice_for_weeks_five"
            android:gravity="center"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center|left"
            android:paddingLeft="50dp"
            android:layout_marginTop="20dp"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/btn_advice"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:text="@string/fragment_baby_condition_expert_advice"
            android:paddingLeft="50dp"
            android:layout_marginTop="100dp"/>

        <Button
            android:id="@+id/btn_experience"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textSize="20dp"
            android:text="@string/fragment_baby_condition_experience_mom"
            android:paddingLeft="50dp" />

    </LinearLayout>


</LinearLayout>